Fix navbar overlap issue on desktop - add padding-top to articles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1913,6 +1913,10 @@ textarea.form-input::-webkit-resizer {
     box-shadow: var(--shadow-5);
   }
 
+  article {
+    padding-top: 60px;
+  }
+
 
 
   /**
